# cbs2folio-transformations

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cbs2folio_holding-items_Testsignaturen_ILN3.txt  codes2uuid.xsl  koko170.csv  locations2uuid-iln21.xsl  locations2uuid-iln26-zbw-test.xsl  locations2uuid-iln26.xsl  locations2uuid-iln90.xsl  pica2instance-new.xsl  pica2instance.xsl  relationships.xsl
hebis/: README.md  codes2uuid-hebis-iln204.xsl  codes2uuid-hebis-iln205.xsl  codes2uuid-hebis-iln23.xsl  codes2uuid-hebis-iln25.xsl  codes2uuid-hebis-iln3.xsl  codes2uuid-hebis-iln8.xsl  codes2uuid-hebis.xsl  holding-items-hebis-iln204.xsl  holding-items-hebis-iln205.xsl  holding-items-hebis-iln25.xsl  holding-items-hebis-iln3.xsl  holding-items-hebis-iln8.xsl  holdings-items-hebis-iln23.xsl  holdings-items-hebis.xsl  pica2instance-new.xsl  relationships.xsl
hebis/referenceRecords/: generate.xsl
hebis/referenceRecords/Additional/instance-relationship-types/: article.json  volume.json
hebis/referenceRecords/K10plus/instance-statuses/: Autopsie.json  Bibliografisch-vollstaendig.json  Datensatz-fuer-internen-Gebrauch.json  Erwerbungsdatensatz.json  Fremddatensatz.json  Inhalt-oder-Struktur-ist-zu-ueberpruefen.json  Katalogisat-nach-Autopsie-im-Vorlaeufigkeitsstatus.json  Katalogisat-ohne-Autopsie.json  Loesch-Status.json  Maschinell-konvertierte-Daten.json  Maschinelle-Einspielung-moeglicherweise-dublett.json  Verwaltungsdatensatz.json  Zunaechst-verdeckt-eingespieltes-Novum.json
hebis/testexamples/: 4ex-iln8-p2i.codes.xml  BASISH-60-iln25-p2i-codes.xml  BASISH-NEU-iln25-p2i-codes.xml  BASISH-NEU-iln25-p2i.xml  giessen-440106532-ILN-204-p2i-codes.xml  giessen-test-ppns-phx-ILN204-p2i-codes.xml
leipzig/: pica2instance4liepzig.xsl
python_scripts/: pyproject.toml
python_scripts/src/cbs2folio_transformations/: __init__.py  _const.py  _helpers.py  _test_helpers.py  csv2holdingsxslt.py
python_scripts/tests/: conftest.py  test_csv2holdingsxslt.py  test_csv2holdingsxslt_fuzz.py  test_generation_holding_items.py  test_helpers.py
python_scripts/tests/scenarios/: __init__.py
python_scripts/tests/scenarios/iln204/: __init__.py  test_signature_mapping.py
python_scripts/tests/scenarios/iln3/: __init__.py  abt152_2024-01-21_lbsstat.csv  cbs2folio_holding-items_Testsignaturen_ILN3.txt  koko170.csv  koko173.csv  koko174.csv  kokoV182_24.11.2023.csv  test_signature_mapping.py  test_signature_mapping_default_cases.py
scripts/: csv2holidingsxslt.py  pica2xml.pl  picaxml2json.pl  picaxml2json4leipzig.pl  test_csv2holdingsxslt.py  test_csv2holidingsxslt.py
test/: electronic_017C.xml  no_contributor_name.xml  no_contributor_name2.xml  no_identifier_value2.xml
