[tool.poetry]
name = "cbs2folio-transformations"
version = "0.1.0"
description = ""
authors = ["JensHeinrich <github.com/JensHeinrich>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.10"
rtfparse = "^0.7.8"
beautifulsoup4 = "^4.11.1"
pandas = "^1.5.1"
pydantic = "^1.10.4"
dict2xml = "^1.7.2"
black = "^22.12.0"
xmldiff = "^2.5"
pytest = "^7.2.1"
hypothesis = {extras = ["all"], version = "^6.67.1"}
defusedxml = "^0.7.1"
lxml = "^4.9.2"
pytest-xdist = "^3.2.0"

[tool.poetry.dev-dependencies]
lxml = "^4.9.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]

log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 79

[tool.pyright]
#venvPath="python_scripts/.venv"
